--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+  <header id="intro" class=".container">
+    <div id="info">
+      <div id="contact">
+        <img src="/assets/Thumbnail_Project-01.png" alt="">
+      </div>
+
+    </div>
+
+
+
+  </header>
 
 </body>
 </html>
