--- a/index.html
+++ b/index.html
@@ -10,17 +10,46 @@
   <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-  <header id="intro" class=".container">
-    <div id="info">
-      <div id="contact">
-        <img src="/assets/Thumbnail_Project-01.png" alt="">
+  <div id="bg-header">
+  <header id="intro" class="container">
+    <div id="info" class="grid">
+      
+      <div id= "primary" class="grid">
+      <img src="assets/image/profile.jpg"  class= "margin" alt="">
+      <h2>Hello World! Meu nome é <span>Martina Santos</span> e sou</h2>
+      <h1>Desenvolvedora Fullstack</h1>
+      <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
       </div>
 
-    </div>
-
-
-
+      <div id="secondary" class="grid grid-flow-col">
+        <div>
+        <img src="/assets/icons/GitHub.svg" alt="">
+          <p>GitHub</p>
+      </div>
+      <div>
+        <img src="/assets/icons/HTML.svg" alt="">
+        <p>HTML</p>
+      </div>
+      <div>
+        <img src="/assets/icons/CSS.svg" alt="">
+        <p>CSS</p>
+      </div>
+        <div>
+        <img src="/assets/icons/JavaScript.svg" alt="">
+        <p>Javascript</p>
+      </div>
+      <div>
+        <img src="/assets/icons/React.svg" alt="">
+        <p>React</p>
+      </div>
+      <div>
+        <img src="/assets/icons/Node.js.svg" alt="">
+        <p>Node.JS</p>
+      </div>
+      </div>
+    <img id= "icons" src="/assets/icons/CaretDoubleDown.svg" alt="">
   </header>
+</div>
 
 </body>
 </html>
