--- a/index.html
+++ b/index.html
@@ -51,5 +51,60 @@
   </header>
 </div>
 
+<div id="bg-main">
+<main class="container">
+  <header class="grid main">
+    <h2><span>Meu trabalho</span></h2>
+    <h1>Veja os projetos em destaque</h1>
+  </header>
+  <section id="content" class="grid">
+    <figure class="card grid" >
+      <img src="assets/image/Thumbnail_Project-01.png" alt="">
+
+      <figcaption class="grid">
+      <h3>Travelgram</h3>
+      <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+      </figcaption>
+    </figure>
+    <figure class="card grid">
+      <img src="assets/image/Thumbnail_Project-02.png" alt="">
+      <figcaption class="grid">
+      <h3>Tech News</h3>
+      <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+      </figcaption>
+    </figure>
+    <figure class="card grid">
+      <img src="assets/image/Thumbnail_Project-03.png" alt="">
+      <figcaption class="grid">
+      <h3>Página de receita</h3>
+      <p>Página com o passo a passo de uma receita para cupcakes</p>
+      </figcaption>
+    </figure>
+    <figure class="card grid">
+      <img src="assets/image/Thumbnail_Project-04.png" alt="">
+      <figcaption class="grid">
+      <h3>Zingen</h3>
+      <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+      </figcaption>
+    </figure>
+    <figure class="card grid">
+      <img src="assets/image/Thumbnail_Project-05.png" alt="">
+      <figcaption class="grid">
+      <h3>Refund</h3>
+      <p>Um sistema para pedido e acompanhamento de reembolso </p>
+      </figcaption>
+    </figure>
+    <figure class="card grid">
+      <img src="assets/image/Thumbnail_Project-06.png" alt="">
+      <figcaption class="grid">
+      <h3>Página de turismo</h3>
+      <p>Página com as principais informações para quem quer viajar para Busan</p>
+      </figcaption>
+    </figure>
+  </section>
+</main>
+</div>
+
+
 </body>
 </html>
