second section service

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
   </header>
 </div>
 
-<div id="bg-main">
+<div id="bg-work">
 <main class="container">
-  <header class="grid main">
+  <header class="grid main header">
     <h2><span>Meu trabalho</span></h2>
     <h1>Veja os projetos em destaque</h1>
   </header>
-  <section id="content" class="grid">
+  <section id="work" class="grid">
     <figure class="card grid" >
       <img src="assets/image/Thumbnail_Project-01.png" alt="">
 
@@ -102,8 +102,17 @@
       </figcaption>
     </figure>
   </section>
-</main>
 </div>
+<div id="bg-service">
+  <section id="service" class="grid">
+    <header class="grid main header">
+      <h2><span>Meu serviços</span></h2>
+      <h1>Como posso ajudar o seu negócio</h1>
+    </header>
+
+  </section>
+</div>
+</main>
 
 
 </body>
