--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-  <div id="bg-header">
+  <div class="bg-header">
   <header id="intro" class="container">
     <div id="info" class="grid">
       
@@ -51,7 +51,7 @@
   </header>
 </div>
 
-<div id="bg-work">
+<div class="bg-work">
 <main class="container">
   <header class="grid main header">
     <h2><span>Meu trabalho</span></h2>
@@ -103,17 +103,41 @@
     </figure>
   </section>
 </div>
-<div id="bg-service">
-  <section id="service" class="grid">
+<div class="bg-service">
+  <section id="service" class="grid container">
     <header class="grid main header">
       <h2><span>Meu serviços</span></h2>
       <h1>Como posso ajudar o seu negócio</h1>
     </header>
 
+    <div class="grid">
+
+    <figure class="grid main card" >
+      <img src="assets/icons/Devices.svg" alt="">
+      <figcaption class="grid">
+      <h3>Websites e Aplicativos</h3>
+      <p>Desenvolvumento de interfaces</p>
+      </figcaption>
+    </figure>
+    <figure class=" grid" >
+      <img src="assets/icons/HardDrives.svg" alt="">
+      <figcaption class="grid">
+      <h3>API e banco de dados</h3>
+      <p>Criação de serviços do sistema</p>
+    </figcaption>
+  </figure>
+      <figure class="grid" >
+        <img src="assets/icons/Infinity.svg" alt="">
+  
+        <figcaption class="grid">
+        <h3>DevOps</h3>
+        <p>Gestão e infraestrutura da aplicação</p>
+      </figcaption>
+    </figure>
+      </div>
+
   </section>
 </div>
 </main>
-
-
 </body>
 </html>
