--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 </div>
 <div class="bg-service">
   <section id="service" class="grid container">
-    <header class="grid main header">
+    <header class="grid header">
       <h2><span>Meu serviços</span></h2>
       <h1>Como posso ajudar o seu negócio</h1>
     </header>
 
     <div class="grid">
 
-    <figure class="grid main card" >
+    <figure class="grid card" >
       <img src="assets/icons/Devices.svg" alt="">
       <figcaption class="grid">
       <h3>Websites e Aplicativos</h3>
@@ -137,6 +137,42 @@
       </div>
 
   </section>
+</div>
+<div class="bg-contact">
+  <section id="contact" class="container">
+  <header class="header grid">
+    <h2><span>Contato</span></h2>
+    <h1>Gostou do meu trabalho?</h1>
+    <p>Entre em contato ou acompanhe as minhas redes sociais!</p>
+  </header>
+    <div id="link" class="grid">
+
+      <figure class="grid grid-flow-col">
+        <img src="assets/icons/LinkedinLogo.svg" alt="">
+        <p>Linkedin</p>
+        <img src="assets/icons/ArrowUpRight.svg" alt="">
+      </figure>
+
+      <figure class="grid grid-flow-col">
+        <img src="assets/icons/InstagramLogo.svg" alt="">
+        <p>Instagram</p>
+        <img src="assets/icons/ArrowUpRight.svg" alt="">
+      </figure>
+      
+      <figure class="grid grid-flow-col">
+        <img src="assets/icons/GithubLogo.svg" alt="">
+        <p>GitHub</p>
+        <img src="assets/icons/ArrowUpRight.svg" alt="">
+      </figure>
+      
+      <figure class="grid grid-flow-col">
+        <img src="assets/icons/EnvelopeSimple.svg" alt="">
+        <p>E-mail</p>
+        <img src="assets/icons/ArrowUpRight.svg" alt="">
+      </figure>
+
+    </div>
+</section>
 </div>
 </main>
 </body>
